5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1822_3181.log
== TEST (2019-06-13 11:34:20) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
i = 0
for x in b:
	i[x] = i [x] + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:34:31) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
i = 0
for x in b:
	i[x] = i[x] + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:34:54) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
i = 0
for x in range(b):
	i[x] = i[x] + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:35:18) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
i = 0
for x in range(size(b)):
	i[x] = i[x] + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:35:35) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
i = 0
for x in range(size(b)):
	i = i[x] + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:09) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
i = 0
for x in range(size(b)):
	if a[x] > 0:
	b[x] = b[x] + 1
	
print(b)
-- ERROR:
File "XXXX", line 8
    b[x] = b[x] + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:09) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
i = 0
for x in range(size(b)):
	if a[x] > 0:
	b[x] = b[x] + 1
	
print(b)
-- ERROR:
File "XXXX", line 8
    b[x] = b[x] + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:09) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
i = 0
for x in range(size(b)):
	if a[x] > 0:
	b[x] = b[x] + 1
	
print(b)
-- ERROR:
File "XXXX", line 8
    b[x] = b[x] + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:09) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
i = 0
for x in range(size(b)):
	if a[x] > 0:
	b[x] = b[x] + 1
	
print(b)
-- ERROR:
File "XXXX", line 8
    b[x] = b[x] + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:09) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
i = 0
for x in range(size(b)):
	if a[x] > 0:
	b[x] = b[x] + 1
	
print(b)
-- ERROR:
File "XXXX", line 8
    b[x] = b[x] + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:09) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
i = 0
for x in range(size(b)):
	if a[x] > 0:
	b[x] = b[x] + 1
	
print(b)
-- ERROR:
File "XXXX", line 8
    b[x] = b[x] + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:10) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
i = 0
for x in range(size(b)):
	if a[x] > 0:
	b[x] = b[x] + 1
	
print(b)
-- ERROR:
File "XXXX", line 8
    b[x] = b[x] + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:28) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
i = 0
for x in range(size(b)):
	if a[x] > 0:
	b[x] = b[x] + 1
	
print(b)
-- ERROR:
File "XXXX", line 8
    b[x] = b[x] + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:33) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
i = 0
for x in range(size(b)):
	if a[x] > 0:
		b[x] = b[x] + 1
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:53) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
i = 0
for x in range(size(b)):
	if a > 0:
		b[x] = b[x] + 1
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:38:35) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)

for x in range(size(b)):
	if a[b] > 0:
		b[x] = b[x] + 1
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:14) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)

for x in range(size(b)):
	if a[x] > 0:
		b[x] = b[x] + 1
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:28) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)

for x in range(size(a)):
	if a[x] > 0:
		b[x] = b[x] + 1
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:40:41) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)

for x in range(size(a)):
	if a[x] > 0:
		b[x] = b[x] + 1
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:41:43) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
c = 0
d = 0
for x in range(size(a)):
	if a[x] > 0:
		b[x] = b[x] + 1
		d[x] = b[x]
		c[x] = d[x]
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:42:03) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)
c = 0
d = 0
for x in range(size(a)):
	if a[x] > 0:
		b[x] = b[x] + 1
		d[b] = b[x]
		c[d] = d[x]
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:44:27) 
-- CODE:
from numpy import*

a = array(eval(input("sorte:")))
b = zeros(36,dtype=int)

for x in range(size(a)):
	if a[x] > 0:
		b[x] = b[x] + 1
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
